Tests/context/invalid/class10.java
class A {
    int x;
}
{
    A a; //On'a pas initialisé l'objet
    a.x=5;
}